[package]
name = "http_client_lol"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.140"
chrono = "0.4.41"
mail-send = "0.5.1"
humantime = "2"
